--- a/application.css
+++ b/application.css
@@ -14,6 +14,10 @@ body{
     text-align:center;
 }
 
+#header{
+    background: rgba(0,0,0, 0.7);
+}
+
 /* Mobile devices (768px)*/
 @media (max-width: 768px){
     
