Mall Maverick 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -65,6 +65,10 @@ body{
     .main_container{
         width:960px;
     }
+    .main_logo{
+        width:257px;
+        margin-top: 0px;
+    }
     
 }
 
