--- a/application.css
+++ b/application.css
@@ -53,6 +53,7 @@ body{
             padding: 17px;
             a{
                 color: #fff;
+                font-size:16px;
                 &:hover, &:focus{
                     text-decoration:none;
                     color: #FFBE1D;
