Mall Maverick 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -28,7 +28,7 @@ body{
     body{ margin:0px 0px; }
 
 #hero{
-  background-image:url(https://chrisaam.files.wordpress.com/2015/03/wallpaper-2846361.jpg);
+  background-image:url(http://assets.codecloudapp.com/sites/568d5ba06e6f6402d6000000/image/png/1452631255000/hero_banner.png);
   background-size:cover;
   position:relative;
   height:100vh;
