Mall Maverick 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -75,6 +75,11 @@ body{
         }
     }
     
+    .features{
+        position:absolute;
+        
+    }
+    
 }
 
 /* Medium devices (desktops, 992px and up) */
