Mall Maverick 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -77,7 +77,10 @@ body{
     
     .features{
         position:absolute;
-        
+        img{
+            max-width:282px;
+            
+        }
     }
     
 }
