Mall Maverick 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -79,7 +79,7 @@ body{
         position:absolute;
         img{
             max-width:282px;
-            
+            display:inline-block;
         }
     }
     
