--- a/application.css
+++ b/application.css
@@ -74,9 +74,17 @@ body{
             }
         }
     }
-    
+    .hero_container{
+        position: relative;
+        height: 100%;
+    }
     .features{
-        position:absolute;
+        position: absolute;
+        width: 100%;
+        top: calc(50% + 41px);
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: center;
         img{
             max-width:282px;
             display:inline-block;
