Mall Maverick 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -97,6 +97,9 @@ body{
         bottom: 80px;
         text-align: center;
         width: 100%;
+        i, span{
+            display:block;
+        }
     }
     
 }
