Mall Maverick 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -101,6 +101,7 @@ body{
             display:block;
             margin:5px 0;
             color:#fff;
+            font-size:12px;
         }
     }
     
