Mall Maverick 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -103,6 +103,9 @@ body{
             color:#fff;
             font-size:12px;
         }
+        i{
+            background: #D8D8D8;
+        }
     }
     
 }
