Mall Maverick 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -105,7 +105,7 @@ body{
         }
         i{
             background: #D8D8D8;
-            border:1px solid 979797;
+            border:1px solid #979797;
         }
     }
     
