--- a/application.css
+++ b/application.css
@@ -104,8 +104,10 @@ body{
             font-size:12px;
         }
         i{
-            background: #D8D8D8;
-            border:1px solid #979797;
+            background: #979797;
+            padding: 6.5px;
+            border-radius: 15px;
+            opacity: 0.9;
         }
     }
     
