Mall Maverick 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -118,7 +118,7 @@ body{
 @media (min-width: 992px) {
     .features{
         img{
-            max-width: 100%
+            max-width: 282px
         }
     }
     .main_container{
