--- a/application.css
+++ b/application.css
@@ -2,7 +2,7 @@
 This is a Saas file has an 'Asset Type' of SCSS. CSS will be compiled when saving.
 For more information on asset types please see http://www.getcodecloud.com/docs#SaSS
 */
-@import url('http://fonts.googleapis.com/css?family=Open+Sans');
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600)
 
 body{
     font-family:'Open Sans';
