Mall Maverick 1.1  /application.css

--- a/application.css
+++ b/application.css
@@ -2494,6 +2494,11 @@ hr.grey_line {
         background-position: center center;
         // z-index: -1;
         // margin-top: 90px;
+        .banner_text {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+        }
     }
     
     #contact-hero{
