Mall Maverick 1.1  /application.css

--- a/application.css
+++ b/application.css
@@ -2495,7 +2495,8 @@ hr.grey_line {
         // z-index: -1;
         // margin-top: 90px;
         .hero_container {
-            
+            height: 700px;
+            position: relative;
         }
         .banner_text {
             position: absolute;
