Mall Maverick 1.1  /application.css

--- a/application.css
+++ b/application.css
@@ -2503,7 +2503,7 @@ hr.grey_line {
             top: 50%;
             transform: translateY(-50%);
             .banner_title {
-                
+                color: #fff;
             }
         }
     }
