Mall Maverick 1.1  /application.css

--- a/application.css
+++ b/application.css
@@ -2505,6 +2505,7 @@ hr.grey_line {
             font-family: 'Open Sans';
             .banner_title {
                 color: #fff;
+                font-family: 'Open Sans';
             }
         }
     }
