Mall Maverick 1.1  /application.css

--- a/application.css
+++ b/application.css
@@ -2506,6 +2506,7 @@ hr.grey_line {
             .banner_title {
                 color: #fff;
                 font-family: 'Open Sans';
+                text-transform : uppercase;
             }
         }
     }
