Mall Maverick 1.2  /application.css

--- a/application.css
+++ b/application.css
@@ -2646,7 +2646,7 @@ hr.grey_line {
             float:left;
             padding: 17px;
             a{
-                color: #fff;
+                color: #000;
                 font-size:16px;
                 &:hover, &:focus{
                     text-decoration:none;
