--- a/application.css
+++ b/application.css
@@ -263,7 +263,7 @@ img {
             // padding: 8px 0;
             padding-top: 8px;
             a{
-                color:#fff;
+                color:#000;
                 font-size:16px;
                 &:hover, &:focus{
                     text-decoration:none;
