--- a/application.css
+++ b/application.css
@@ -477,6 +477,13 @@ img {
 .align_center {
     text-align:center;
 }
+
+/*** clients *****/
+. client_logo_container {
+    
+}
+
+
 #template_content{
     
     // .image {
