--- a/template.css
+++ b/template.css
@@ -276,3 +276,98 @@
     }
     
 }
+
+
+#orange_line {
+    text-align: center;
+    position: absolute;
+    top: inherit;
+    left: 50%;
+    -webkit-transform:translate(-50%, -50%);
+    -moz-transform:translate(-50%, -50%);
+    -ms-transform:translate(-50%, -50%);
+    -o-transform:translate(-50%, -50%);
+    transform:translate(-50%, -50%);
+}
+
+.template_btn{
+    text-align:center;
+    background-color:#323232;
+    color: #fff;
+    font-size:16px;
+    // border-radius: 2px;
+    border-radius: 999rem;
+    padding:10px 20px;
+    // margin:10px;
+    :active{
+        background-color: #FFBE1D;
+        color:#000;
+        text-decoration:none;
+    }
+    
+}
+.template_btn:active,
+.template_btn:focus,
+.template_btn.active,
+.template_btn:hover{
+    background-color: #FFBE1D;
+    color:#000;
+    text-decoration:none;
+    background-image: none;
+    outline: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+.template_padding {
+    padding:20px;
+    height:100%;
+    position:relative;
+}
+
+.template_padding_like {
+    padding:20px;
+    height:100%;
+    position:relative;
+}
+.new_template {
+    max-width:40px;
+    max-height:46px;
+    position: absolute;
+    top: 0px;
+    right: 65px;
+    z-index: 1;
+}
+
+#custom_design_container {
+    border-radius: 20px;
+    background-color: #fff;
+    margin: 0 150px; 
+    padding: 40px 30px 220px;
+    text-align: center;
+    h4{
+        font-size:20px;
+        font-weight:normal;
+        color: #000000;
+        line-height: 35px;
+        padding-bottom: 10px;
+    }
+    p {
+      padding: 30px;
+    }
+    #orange_line {
+        width: 75%;
+    }
+}
+.active_templ_btn {
+    background-color: #FFBE1D;
+    color:#000;
+    text-decoration:none;
+}
+.active_templ_btn:active,
+.active_templ_btn:focus,
+.active_templ_btn.active{
+    background-image: none;
+    outline: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
